--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "travel-journal",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://3vilBonobo.github.io",
+  "homepage": "https://3vilBonobo.github.io/react-travel-journal",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
